# sonar-rules

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  ORIGINAL_REQUEST.md  PROJECT.md  README.md  SECURITY.md  pom.xml  pyproject.toml  skills-lock.json  tickets.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/scripts/: bump-version.sh
.github/workflows/: _build.yml  ci.yml  codeql.yml  release.yml
.sonarlint/: connectedMode.json
docs/adr/: 0001-automated-conventional-commits-versioning.md
python_benchmarks/: test_deque.py  test_fastapi.py  test_new_rules.py  test_pandas.py  test_pythonspeed_rules.py  test_rules_benchmark.py  test_sqlalchemy.py
src/main/resources/: license-header.txt
src/test/resources/checks/: AvoidDictKeysIteration.py  AvoidEagerRegexCompilation.py  AvoidFileOpenWithoutWith.py  AvoidListAdditionInLoop.py  AvoidMapLambda.py  AvoidPandasIterrows.py  AvoidRangeLenIteration.py  AvoidSelectStar.py  AvoidStarImport.py  AvoidSyncIoInAsync.py  AvoidTryExceptControlFlow.py  BatchOperationsRequired.py  DbLevelAggregation.py  DequeOverListInsert.py  EfficientStringConcatenation.py  EnforceConnectionPooling.py  FastJsonParsing.py  GeneratorsOverLists.py  ImmutableDataTransfer.py  MandatoryTimeouts.py  NoGlobalMutableState.py  NoneComparisonStyle.py  PreferDirectTruthiness.py  PreferFStringOverFormat.py  PreferIsinstanceOverTypeEquality.py  PreferReversedOverSlice.py  PreferSetMembership.py  (+7 more)
(+185 files in other folders)
